# autogluon-mlops-practice

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  conftest.py  metadata.yaml  pyproject.toml
.github/workflows/: test_on_push.yaml
deploy/: .env.example  app.py  start.sh
notebooks/: autogluon_timeseries_main.ipynb
src/scripts/dataloader/: config.py  factory.py  loaders.py
src/tests/: dummy_data.csv  test_dataset_loader.py
