[project]
name = "baswap"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

dependencies = [
    "ipykernel>=7.1.0",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
ml = [
    "autogluon",
    "torch",
    "scikit-learn",
    "wandb",
    "optuna",
    "ray",
    "pytest",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "dvc>=3.64.2",
    "dvc-s3>=3.2.2",
]

aws = [
    "localstack",
    "fastapi",
    "uvicorn",
    "pydantic",
    "awscli-local>=0.22.2",
]

test = [
  "pytest",
  "black",
  "pandas",
  "typing",
]
